--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -18,6 +18,8 @@ jobs:
       - run: npm ci
       - run: npm run build
       - uses: shallwefootball/s3-upload-action@master
+        name: Upload S3
+        id: S3
         with:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
