Update S3 bucket name in deployment workflow

--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           npm install -g aws-cli
           # Sync all files (will guess MIME types automatically)
-          aws s3 sync ./dist s3://YOUR_BUCKET_NAME --exact-timestamps
+          aws s3 sync ./dist s3://ai-clean-up --exact-timestamps
 
           # Explicitly set Content-Type for HTML files to prevent wrong downloads
-          find ./dist -name "*.html" -exec aws s3 cp {} s3://YOUR_BUCKET_NAME/{} --content-type text/html \;
+          find ./dist -name "*.html" -exec aws s3 cp {} s3://ai-clean-up/{} --content-type text/html \;
 
