--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -27,10 +27,5 @@ jobs:
           npm install -g aws-cli
           aws s3 sync ./dist s3://ai-clean-up --exact-timestamps
 
-          find ./dist -name "*.html" -exec sh -c '
-            for filepath; do
-              filename="${filepath#./dist/}"
-              aws s3 cp "$filepath" "s3://ai-clean-up/$filename" --content-type text/html
-              done
-            ' sh {} +
+          aws s3 cp --content-type text/html ./dist/index.html s3://ai-clean-up/index.html
 
