--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -24,8 +24,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-south-1
         run: |
-          npm install -g aws-cli
-          aws s3 sync ./dist s3://ai-clean-up --exact-timestamps
+          aws s3 sync ./dist s3://ai-clean-up ---recursive
 
-          aws s3 cp --content-type text/html ./dist/index.html s3://ai-clean-up/index.html
+          
 
